2011-03-15  Ivan Maidanski  <ivmai@mail.ru>

	* alloc.c (GC_finish_collection): Replace "#else #ifdef" with
	"#elif".
	* include/private/gc_priv.h (CPP_LOG_HBLKSIZE, LOG_PHT_ENTRIES,
	MAX_ROOT_SETS, MAX_HEAP_SECTS): Ditto.
	* alloc.c (GC_expand_hp_inner): Check for GC_collect_at_heapsize
	overflow even if not LARGE_CONFIG.
	* dbg_mlc.c (GC_check_heap_proc): Check "oh" size even if
	SMALL_CONFIG.
	* finalize.c (GC_print_finalization_stats): Fix "#endif" comment.
	* new_hblk.c (GC_build_fl_clear2, GC_build_fl_clear4, GC_build_fl2,
	GC_build_fl4): Reformat the comment; adjust code indentation.
	* new_hblk.c (GC_build_fl): Fix indentation.
	* include/private/gc_hdrs.h: Ditto.
	* doc/README.environment (GC_LOG_FILE, GC_PRINT_VERBOSE_STATS,
	GC_FULL_FREQUENCY): Refine the documentation.

2011-03-13  Ivan Maidanski  <ivmai@mail.ru>

	* extra/msvc_dbg.c: Test _MSC_VER macro; include "gc.h" (for
	GC_word); reformat the code; expand all tabs to spaces.
	* extra/msvc_dbg.c (ULONG_PTR): Replace with GC_ULONG_PTR; define
	as word.

2011-03-13  Ivan Maidanski  <ivmai@mail.ru>

	* dbg_mlc.c (GC_get_back_ptr_info, GC_print_obj,
	GC_print_smashed_obj, GC_debug_free_inner): Add a code for a
	LINT-like tool to instruct it that the function is invoked only
	with valid parameters (otherwise a SEGV is ok); recognize LINT2
	new macro.
	* misc.c (GC_abort): Instruct a LINT-like tool that the function
	never returns in fact.
	* os_dep.c (GC_linux_stack_base): Check for read buffer overflow;
	close the file immediately after read; use STRTOULL() instead of
	decoding the address number manually.
	* include/private/gc_priv.h (EXPECT): Don't specify outcome for a
	LINT-like tool.
	* include/private/gc_priv.h (GC_all_interior_pointers): Instruct a
	LINT-like tool that the value is restricted to zero and one only
	(required since the variable is global and its value is used as a
	part of array index expression is some places).

2011-03-13  Ivan Maidanski  <ivmai@mail.ru>
