@@ -1,5 +1,13 @@
 2011-03-15  Ivan Maidanski  <ivmai@mail.ru>
 
+	* doc/README.macros (SMALL_CONFIG, LARGE_CONFIG): Refine the
+	documentation.
+	* include/private/gc_hdrs.h (LOG_BOTTOM_SZ): Ignore SMALL_CONFIG
+	if LARGE_CONFIG is defined.
+	* include/private/gc_priv.h (CPP_LOG_HBLKSIZE): Ditto.
+
+2011-03-15  Ivan Maidanski  <ivmai@mail.ru>
+
 	* alloc.c (GC_finish_collection): Replace "#else #ifdef" with
 	"#elif".
 	* include/private/gc_priv.h (CPP_LOG_HBLKSIZE, LOG_PHT_ENTRIES,
